dashboard/static/dashboard/css/feed.css
.small-profile-img {

    width: 32px;
    height: 32px;
}

.album-img{
    width: 100%;
    height: 100%;
}

.album-info{

    border-color: #33333375 !important;
    border-width: 3px !important;
}

.black-icon{

    color: black !important;
}

.red-icon{

    color: red !important;
}

.play-button{
    position: absolute;
    top: 40%;
    left: 40%;
    color: #ffffffca;
}

.small-play-button{
    position: absolute;
    top: 35%;
    left: 35%;
    color: #ffffffca;
}

.play-button:hover{
   color: #ffffff;
}

.small-play-button:hover{
   color: #ffffff;
}

.content-card-header{
    background: #bdbdbd;
}

.content-card-body{
    background: #ebebeb;
}

.content-card-footer{
    background: #bdbdbd;
}

.list-group{
    height: 30rem;
    overflow:scroll;
    overflow-x: hidden;
}

.playlist-item{
    height: 10rem;
}

.img-playlist{
  height: 100px;
  width: 100px;

}

.plus-button{
  color: green;
  background-color: transparent;
  border-width: 0px;
}

.info-button{
  color: blue;
  background-color: transparent;
  border-width: 0px;
}

.playlist-button{
  border-color: black !important;
}


.playlist-button:hover{
  background-color: #F1F1F1 !important;
}

.playlist-info{
  border-width: 1px !important;
  border-top: transparent !important;
  border-color: #6A6969  !important;
  background: linear-gradient(to top, #bdbdbd 45%, #DCDCDC 95%);
}



.link-black{
  color: black !important;
}

